# claude-learn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
commands/: learn-audit.md  learn-delete.md  learn-list.md  learn-update.md  learn.md
examples/: hono-skill-example.md  stripe-skill-example.md
scraper/: __init__.py  __main__.py  cache.py  cli.py  config.py  discovery.py  extractor.py  fetcher.py  queue.py
scraper/tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_discovery.py  test_extractor.py  test_fetcher.py  test_integration.py  test_queue.py  test_security.py
