[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-learn-scraper"
version = "0.2.0"
description = "Runtime web scraper for claude-learn skill file generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mofeed28"},
]
keywords = ["claude", "scraper", "documentation", "skill-generation", "web-scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/mofeed28/claude-learn"
Repository = "https://github.com/mofeed28/claude-learn"
Issues = "https://github.com/mofeed28/claude-learn/issues"

[project.scripts]
claude-learn-scraper = "scraper.cli:main"

[tool.setuptools.packages.find]
include = ["scraper*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["scraper/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks security-related tests",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["scraper"]
omit = ["scraper/tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"scraper/tests/*" = ["S101", "S106", "S108", "N806", "E741"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "scraper.tests.*"
disallow_untyped_defs = false
